resources/public/common/widget.css
.widget h1 {
    margin: 5px 0 0;
    font-weight: normal;
    font-size: 100%;
    letter-spacing: 0.08em;
}
.widget h1, .widget .csv {
    display: inline-block;
}
.widget .csv {
    margin-left: 1em;
    font-size: 70%;
    text-decoration: underline;
}
.widget a {
    text-decoration: none;
    color: inherit;
}
.widget {
    font-size: 1rem;
    box-sizing: border-box;
    display: inline-block;
    padding: 10px;
    position: relative;
    z-index: 0;
    /* https://css-tricks.com/fighting-the-space-between-inline-block-elements/ */
    margin-right: -4px;
}
.widget:hover:not(:target) {
    background-color: #f7f7f7;
}
.widget .enlarge {
    height: 100%;
    display: flex;
    flex-flow: column;
}
.widget svg {
    flex: 2;
    overflow: auto;
}
.widget:target {
    position: fixed;
    width: 100vmin;
    height: 100vmin;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: 1;
}
.widget:target::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0.95;
    background-color: white;
    z-index: -1;
}
.widget .nodata {
    display: none;
}
.widget svg:empty + .nodata {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    color: grey;
}
.widget svg text {
    font-size: 0.8rem;
}

